--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts"
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "prod": "NODE_ENV=production node ./dist/server.js",
+    "postinstall": "prisma generate",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -20,9 +23,13 @@
   },
   "dependencies": {
     "@prisma/client": "^6.0.0",
+    "@types/http-status": "^1.1.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^4.21.1",
-    "ts-node-dev": "^2.0.0"
+    "http-status": "^2.0.0",
+    "http-status-codes": "^2.3.0",
+    "ts-node-dev": "^2.0.0",
+    "uuid": "^11.0.3"
   }
 }
